# SecondAttempt

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
apps/: app_manifest.json
catalog/: .gitkeep
catalog/import_logs/: .gitkeep
content/blogs/example-blog/: example-article.json
content/pages/: example-page.json
content/policies/: privacy-policy.md
docs/: APPS_PARITY.md  ARCHITECTURE.md  DEPLOYMENT.md  PRODUCTS.md  QUICKSTART.md  TROUBLESHOOTING.md
navigation/: menus.json
products/example-product/: product.json
scripts/: catalog_build.py  catalog_sync.py  content_sync.py  discover_app_dependencies.py  full_replicate_sync.py  source_download_media.py  source_export.py  source_transform_all.py  source_transform_blogs.py  source_transform_navigation.py  source_transform_pages.py  source_transform_policies.py  source_transform_products.py  theme_pull_source.sh  theme_push.sh  validate_repo.py
scripts/lib/: __init__.py  catalog.py  content.py  diff.py  env_utils.py  hashing.py  retry.py  shopify_client.py  source_artifacts.py  source_export_client.py  state_store.py
skills/: catalog_rules.md  ci_cd.md  images_and_media.md  repo_structure.md  shopify_sync.md  theme_dev.md  troubleshooting.md
theme/: README.md
theme/layout/: theme.liquid
